<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.m3chladon.earthquakeanalyst.vm.EarthquakeFragmentViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/lbl_mag"
                style="@style/EarthquakeInfo"
                app:layout_constraintLeft_toLeftOf="@id/left_guide"
                android:text="@string/mag"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Büyüklük"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_place_depth"
                style="@style/EarthquakeInfo"
                app:layout_constraintStart_toEndOf="@id/lbl_mag"
                android:layout_marginStart="16dp"
                android:text="@string/place_depth"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Yer/Derinlik"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_date_time"
                style="@style/EarthquakeInfo"
                android:text="@string/date_time"
                app:layout_constraintEnd_toStartOf="@+id/right_guide"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Zaman" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_earthquake"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/earthquake_list_item"
                app:layout_constraintTop_toBottomOf="@id/lbl_mag"
                app:layout_constraintBottom_toBottomOf="parent"
                android:overScrollMode="never" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
