<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.m3chladon.earthquakeanalyst.vm.EventDetailsFragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@android:color/transparent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/left_guide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.05" />

                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/right_guide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.95" />

                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/top_guide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.15" />

                    <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/bottom_guide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.85" />

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_wallpaper"
                            app:layout_collapseMode="parallax"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                            style="@style/CardViewStyle"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
                            app:layout_constraintEnd_toEndOf="@id/right_guide"
                            app:layout_constraintStart_toStartOf="@id/left_guide"
                            app:layout_constraintTop_toBottomOf="@id/top_guide">

                        <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:textColor="@color/White"
                                    android:textSize="14sp"
                                    android:text="@string/mag"
                                    app:layout_constraintStart_toStartOf="@id/lbl_mag"
                                    app:layout_constraintEnd_toEndOf="@id/lbl_mag"
                                    app:layout_constraintBottom_toBottomOf="@id/lbl_mag"
                                tools:text="Büyüklük" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:textColor="@color/White"
                                    android:textSize="14sp"
                                    android:text="@string/lbl_depth"
                                    app:layout_constraintStart_toStartOf="@id/lbl_depth"
                                    app:layout_constraintEnd_toEndOf="@id/lbl_depth"
                                    app:layout_constraintBottom_toBottomOf="@id/lbl_depth"
                                    tools:text="Derinlik" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/lbl_mag"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:background="@drawable/details_ring"
                                    android:gravity="center"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                    android:textColor="@color/White"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toTopOf="@id/lbl_place"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="8.2" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/lbl_depth"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:background="@drawable/details_ring"
                                    android:gravity="center"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                    android:textColor="@color/White"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toTopOf="@id/lbl_place"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="5.6" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/lbl_place"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:maxLines="2"
                                    android:gravity="center"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                                    android:textColor="@color/White"
                                    android:textStyle="bold"
                                    android:layout_marginBottom="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    tools:text="Afyon Karahisar Türkiye" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_map_white"
                android:clickable="true"
                android:focusable="true"
                app:elevation="6dp"
                app:layout_anchor="@id/app_bar_layout"
                app:layout_anchorGravity="bottom|right"
                app:pressedTranslationZ="12dp"
                app:rippleColor="@color/GhostWhite" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
